updated header and next section with css and photos

--- a/index.html
+++ b/index.html
@@ -40,10 +40,11 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
+                <img style='width:70px; margin-left: -370px; margin-top:8px' src='./img/portfolio/thumbnails/pricetag.jpg'/>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Marvel + Star Wars</a>
+                <a class="navbar-brand page-scroll" style="margin-left: 70px; width: 300px" href="#page-top">Marvel + Star Wars</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +72,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">The Marvel Star Wars Explorers Podcast</h1>
+                <img style='width:70px' src='./img/portfolio/thumbnails/allnew.png'/>
+                <h1 id="homeHeading">The Marvel Star Wars <br/> Explorers Podcast</h1>
+                <br>
+                <img style='width:70px' src='./img/portfolio/thumbnails/luke.jpg'/>
                 <hr>
                 <p>"This is my favorite podcast of all time." - Sio Bibble</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Listen</a>
@@ -81,9 +85,10 @@
 
     <section class="bg-primary" id="about">
         <div class="container">
+                                <img style='width:200px' src='./img/portfolio/thumbnails/enterluke.jpg'/>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Embed Podcast Here</h2>
                     <hr class="light">
                     <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
@@ -92,7 +97,7 @@
         </div>
     </section>
 
-    <section id="services">
+    <section id="services" style="background-color: 	#B97FC1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
